# claude-os

./: .gitignore  README.md  app.py  assistant.py  requirements.txt
src/: .dockerignore  .gitignore  README.md  example.env  pyproject.toml  requirements.txt
src/.github/workflows/: docker-images.yml  ecr-images.yml
src/ai/: assistants.py  settings.py
src/api/: settings.py
src/api/routes/: assistants.py  status.py
src/app/: app.py
src/db/: settings.py
src/scripts/: build_dev_image.sh  build_prd_image.sh
src/workspace/: dev_resources.py  prd_resources.py  settings.py
src/workspace/example_secrets/: dev_app_secrets.yml  prd_app_secrets.yml
